2005-06-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/flyspell.el (flyspell-auto-correct-binding)
	(flyspell-incorrect-face, flyspell-duplicate-face):
	Use (X)Emacs-agnostic code.
	(flyspell-mode-map): Don't overwrite at each load.  Remove code
	redundant with the subsequent add-minor-mode.  Merge Emacs and
	XEmacs code.
	(flyspell-word): Minor simplification.
	(flyspell-math-tex-command-p): Quieten the byte-compiler.
	(flyspell-external-point-words): Remove unused vars `size' and `start'.
	(flyspell-do-correct): Rename from flyspell-xemacs-correct.
	Merge the corresponding Emacs code.
	(flyspell-correct-word, flyspell-xemacs-popup): Use flyspell-do-correct.

	* emacs-lisp/debug.el (debug): Don't bury the buffer unless it's in
	a dedicated window.

	* international/latexenc.el (latexenc-find-file-coding-system):
	Undo part of last patch, to turn off a compiler warning.

2005-06-06  Juri Linkov  <juri@jurta.org>

	* tmm.el (tmm-inactive, tmm-remove-inactive-mouse-face):
	Rename `tmm-inactive-face' to `tmm-inactive'.

2005-06-06  Matt Hodges  <MPHodges@member.fsf.org>

	* iswitchb.el: Rename faces.

2005-06-06  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua-rectangle, cua-rectangle-noselect)
	(cua-global-mark): Remove -face suffix from face names.

	* emulation/cua-gmrk.el (cua--init-global-mark):
	Remove cua-global-mark face setup.

2005-06-06  Richard M. Stallman  <rms@gnu.org>

	* progmodes/make-mode.el (makefile-dependency-regex): Handle whitespace
	just like other allowed characters.
	(makefile-match-dependency): Exclude leading and training whitespace
	from the range of regexp subexp 1.
	(makefile-macroassign-regex): Don't try to match the body,
	just the name of the macro being defined.

	* info.el (Info-read-node-name-2): New function.
	(Info-read-node-name-1): Use that.
	Add a completion-base-size-function property.

	* simple.el (completion-setup-function): Look for
	completion-base-size-function property of